docs: add BizTone TODO spec for upcoming features; enable per-domain rules + whitelist/blacklist UI plan\n\n- Add BizTone_TODO_NEXT_FEATURES.md\n- Prepare groundwork for domain rules, transparency, logs, feedback\n- Note data categorization work (fword categories placeholder)

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "storage",
     "scripting",
-    "clipboardWrite"
+    "clipboardWrite",
+    "tabs"
   ],
   "host_permissions": [
     "https://api.openai.com/*"
@@ -56,7 +57,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["data/fword_list.txt"],
+      "resources": ["data/fword_list.txt", "data/fword_categories.json"],
       "matches": ["<all_urls>"]
     }
   ]
